--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --primary-color: #9ea21a;
+  --primary-color: #090725d6;
   --secondary-color: rgb(154, _147, _23);
 }
 
@@ -29,16 +29,21 @@
   width: 50px;
   height: 25px;
   border-radius: 60px;
-  box-shadow: -8px -4px 8px 0px #ffffff, 8px 4px 12px 0px #d1d9e6,
-    4px 4px 4px 0px #d1d9e6 inset, -4px -4px 4px 0px #ffffff;
+  box-shadow: 0px 0px 3px 3px rgba(0,0,0,0.24) inset;
+  -webkit-box-shadow: 0px 0px 4px 2px rgba(0,0,0,0.24) inset;
+  -moz-box-shadow: 0px 0px 8px 7px rgba(0,0,0,0.24) inset;
 }
 .ball {
   transition: all 0.3s ease-in-out;
   height: 100%;
   width: 50%;
   border-radius: 50px;
-  box-shadow: -8px -4px 8px 0px #ffffff, 8px 4px 12px 0px #d1d9e6 inset;
+  box-shadow: 0px 0px 3px 3px rgba(0,0,0,0.24) inset;
+-webkit-box-shadow: 0px 0px 7px 3px rgba(0, 0, 0, 0.714) inset;
+-moz-box-shadow: 0px 0px 3px 74px rgba(0,0,0,0.24) inset;
 }
+
+
 .ballMotion {
   transition: all 0.3s ease-in-out;
   transform: translateX(100%);
@@ -49,48 +54,57 @@
 
 /*основная грид сетка из BaseContent */
 .baseContentPicturesGrid {
-  padding-top: 10px;
+  margin-top: 10px;
   width: 90%;
+  height: 400px;
+  background-color: rgb(252 211 77);
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(4, 100px);
-  grid-column-gap: 5px;
   grid-row-gap: 5px;
+  
 }
+
 .baseContentPicturesGridItem1 {
   grid-area: 1 / 1 / 5 / 4;
+
 }
 .baseContentPicturesGridItem2 {
   grid-area: 1 / 4 / 5 / 7;
+
 }
 .baseContentPicturesGridItem3 {
   grid-area: 1 / 7 / 3 / 11;
+
 }
 .baseContentPicturesGridItem4 {
   grid-area: 3 / 7 / 5 / 11;
+
 }
+
 @media (max-width: 1024px) {
   .baseContentPicturesGrid {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(4, 200px);
-    grid-column-gap: 5px;
-    grid-row-gap: 5px;
+    display: flex;
+    flex-direction: column;
   }
 
   .baseContentPicturesGridItem1 {
-    grid-area: 1 / 1 / 2 / 2;
+    max-width: 100%;
+    
   }
   .baseContentPicturesGridItem2 {
-    grid-area: 2 / 1 / 3 / 2;
+    max-width: 100%;
+  
   }
   .baseContentPicturesGridItem3 {
-    grid-area: 3 / 1 / 4 / 2;
+    max-width: 100%;
+  
   }
+
   .baseContentPicturesGridItem4 {
-    grid-area: 4 / 1 / 5 / 2;
+    max-width: 100%;
+
+
   }
 }
 
-@media (max-width: 976px) {
-}
